Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76342

Qt3d ClearBuffers documentation is wrong

XMLWordPrintable

    • 4c7642ea592a736110f67372142c9320c6f84da8 310d4e6d0baaa989c736220f837629e19ab14e05 (qt/qt3d/5.12)

      Documentation for Qt3D ClearBuffers element is not in par to QClearBuffer's.

      See : https://doc.qt.io/qt-5/qml-qt3d-render-clearbuffers.html

      clearColor property is missing and colorbuffer property should be colorBuffer

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paulwicking Paul Wicking
            AlGrenadine Alexandre GRANVAUD
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes