Doc: Fix typo in property name

colorbuffer -> colorBuffer

Fixes: QTBUG-76342
Change-Id: Ic63ac9b333710ebab17aa7c4ccd9e864f10e6fcf
Reviewed-by: Martin Smith <martin.smith@qt.io>
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>